--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.32.2",
+    "@scalar/api-reference": "^1.32.1",
     "astro": "^5.4.2"
   }
 }
